# x-collector

./: .gitignore  README.md  pyproject.toml
examples/: x-collector.yaml
x_collector/: __init__.py  cli.py  collector.py  config.py  models.py  rate_limiter.py
